Bug 347399 - Qt 5.5: mergedialog.cpp.o: In function `QtPrivate::MetaObjectForType<KPeople::Match, void>::value()': undefined reference to `KPeople::Match::staticMetaObject'
Summary: Qt 5.5: mergedialog.cpp.o: In function `QtPrivate::MetaObjectForType<KPeople:...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kpeople
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.10.0
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-05-08 00:12 UTC by Jan Kundrát
Modified: 2016-03-11 23:47 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
full build log (88.17 KB, text/plain)
2015-05-08 00:12 UTC, Jan Kundrát
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jan Kundrát 2015-05-08 00:12:43 UTC
Created attachment 92488 [details]
full build log

With kpeople.git v0.3.0-100-ge8caa0a, GCC 4.8.3 on Gentoo, Qt 5.5. AFAIK this is different from bug 344822, and adding <QObject> to the match_p.h doesn't help.

CMakeFiles/KF5PeopleWidgets.dir/mergedialog.cpp.o: In function `QtPrivate::MetaObjectForType<KPeople::Match, void>::value()':
mergedialog.cpp:(.text._ZN9QtPrivate17MetaObjectForTypeIN7KPeople5MatchEvE5valueEv[_ZN9QtPrivate17MetaObjectForTypeIN7KPeople5MatchEvE5valueEv]+0x2b): undefined reference to `KPeople::Match::staticMetaObject'
Comment 1 Aleix Pol 2015-05-08 11:25:04 UTC
Hi Jan,
I can't reproduce your error also with Qt 5.5.
Comment 2 Albert Astals Cid 2015-05-09 10:57:22 UTC
I think i had something similar in unity8 and fixed it by adding some header files to be moc'ed  https://code.launchpad.net/~aacid/unity8/qt55/+merge/254418 was what i needed to do, in case it inspires you to a fix
Comment 3 Jan Kundrát 2015-05-09 11:07:54 UTC
Alex, what version of cmake do you have? I'm using 2.8.12.2, maybe the automoc logic differs between mine and yours?
Comment 4 Jan Kundrát 2015-05-09 11:27:08 UTC
Right, so it's due to cmake, https://git.reviewboard.kde.org/r/123700/