Fix build with cmake 2.8.12.2

Prior to 3.0, CMake didn't know how to handle the Q_GADGET macro, which
means that its presence was not enough to trigger automoc run on these
files. See [1] for a summary of the situation.

[1] https://mail.kde.org/pipermail/kde-frameworks-devel/2014-December/020713.html
BUG: 347399
REVIEW: 123700